[package]
name = "raspi-ssh-terminal"
version = "0.1.0"
authors = ["Otso Kurkela <otso.kurkela@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chunked_transfer = "1.2.0"
cookie = { version = "0.14", features = ["percent-encode"], optional = true}
once_cell = "1"
qstring = "0.7"
url = "2"
socks = { version = "0.3.2", optional = true }
rustls = { version = "0.18", optional = true, features = [] }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.20", optional = true }
rustls-native-certs = { version = "0.4", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
encoding = { version = "0.2", optional = true }
native-tls = { version = "0.2", optional = true }
cookie_store = { version = "0.12.0", optional = true }
log = "0.4.11"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
rayon = "1.3.0"
rayon-core = "1.7.0"
chrono = "0.4.11"
env_logger = "0.8.1"

[[example]]
name = "smoke-test"